Refactor : Enhance overall test suite reliability
Update various test classes across the project to improve their accuracy
and maintainability. This refactoring addresses outdated test patterns
and ensures better alignment with production code dependencies.